<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="24dp"
    android:background="@drawable/gradient_bg"
    tools:ignore="ExtraText">

    <TextView
        android:id="@+id/loginTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_login"
        android:textSize="26sp"
        android:textStyle="bold"
        android:textColor="@android:color/white"
        android:layout_marginBottom="32dp" />

    <EditText
        android:id="@+id/emailInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="48dp"
        android:autofillHints=""
        android:backgroundTint="@android:color/white"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:textColor="@android:color/white"
        android:textColorHint="#000000"
        tools:ignore="VisualLintTextFieldSize" />

    <EditText
        android:id="@+id/passwordInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="48dp"
        android:autofillHints=""
        android:backgroundTint="@android:color/white"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textColor="@android:color/white"
        android:textColorHint="#212121"
        tools:ignore="VisualLintTextFieldSize" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/loginBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Login"
        android:textSize="18sp"
        android:backgroundTint="@color/teal_700"
        android:layout_marginBottom="16dp"
        style="@style/Widget.MaterialComponents.Button"
        tools:ignore="HardcodedText,VisualLintButtonSize" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/backBtn"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Back"
        android:textColor="#212121"
        android:textSize="18sp"
        tools:ignore="HardcodedText,VisualLintButtonSize" />

    <TextView
        android:id="@+id/registerText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/don_t_have_an_account_register_here"
        android:textColor="#FFF8E1"
        android:textSize="14sp"
        tools:ignore="TextContrastCheck" />

</LinearLayout>