<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="24dp"
    android:background="@drawable/gradient_bg"
    tools:ignore="ExtraText">
    tools:context=".AdminRegisterActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/admin_registration"
        android:textSize="26sp"
        android:textStyle="bold"
        android:textColor="@android:color/white"
        android:layout_marginBottom="32dp" />

    <EditText
        android:id="@+id/nameInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:autofillHints="name"
        android:backgroundTint="@android:color/white"
        android:hint="@string/full_name"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColor="@android:color/white"
        android:textColorHint="#000000"
        tools:ignore="VisualLintTextFieldSize" />

    <EditText
        android:id="@+id/emailInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:autofillHints="emailAddress"
        android:backgroundTint="@android:color/white"
        android:hint="Email"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:textColor="@android:color/white"
        android:textColorHint="#212121"
        tools:ignore="HardcodedText,VisualLintTextFieldSize" />

    <EditText
        android:id="@+id/passwordInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:autofillHints="password"
        android:backgroundTint="@android:color/white"
        android:hint="Password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textColor="@android:color/white"
        android:textColorHint="#212121"
        tools:ignore="HardcodedText,VisualLintTextFieldSize" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/registerBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register_admin"
        android:textSize="18sp"
        android:backgroundTint="@color/teal_700"
        style="@style/Widget.MaterialComponents.Button"
        tools:ignore="VisualLintButtonSize" />

</LinearLayout>